@@ -211,10 +211,10 @@ namespace kt
 		virtual void applySettings() = 0;
 		
 		/// Load a magnet link
-		virtual void load(const bt::MagnetLink & mlink) = 0;
+		virtual void load(const bt::MagnetLink & mlink,const QString & group) = 0;
 		
 		/// Load a magnet link silently
-		virtual void loadSilently(const bt::MagnetLink & mlink) = 0;
+		virtual void loadSilently(const bt::MagnetLink & mlink,const QString & group) = 0;
 	signals:
 		/**
 		 * Seeing that when load returns the loading process may not have finished yet,
